# hostpoller

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytype.cfg
src/hostpoller/: __init__.py  flaskwrapper.py  parseargs.py  poller.py  squeal.py
templates/: dashboard.html  host_selection.html
